{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 263,
  "lineage": "8cc2a435-08b8-ba30-6ff8-4729d10d580f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Demo-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-052efd3df9dad4825",
            "arn": "arn:aws:ec2:us-east-1:626013543087:instance/i-0d687dc41ea5159c6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d687dc41ea5159c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "myawsdemokey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b347ce5a9cfccfbd",
            "private_dns": "ip-10-10-0-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.58",
            "public_dns": "ec2-34-239-43-25.compute-1.amazonaws.com",
            "public_ip": "34.239.43.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-008bd6ca6cb3916a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0235c1dc5e475ffb7",
            "tags": {
              "Name": "Demo-instance"
            },
            "tags_all": {
              "Name": "Demo-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08689a61971ea19bb"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg-1",
            "aws_subnet.pub_subnet1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "demo-nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626013543087:network-acl/acl-04651e2dbeee80284",
            "egress": [],
            "id": "acl-04651e2dbeee80284",
            "ingress": [],
            "owner_id": "626013543087",
            "subnet_ids": [],
            "tags": {
              "Name": "Demo-Nacl"
            },
            "tags_all": {
              "Name": "Demo-Nacl"
            },
            "vpc_id": "vpc-0d456572cc7e44877"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "demo-acl-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-06fd8afc871e8f353",
            "network_acl_id": "acl-04651e2dbeee80284",
            "subnet_id": "subnet-0235c1dc5e475ffb7"
          },
          "dependencies": [
            "aws_network_acl.demo-nacl",
            "aws_subnet.pub_subnet1",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "demo-nacl-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "45.112.30.123/32",
            "egress": true,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-356251767",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04651e2dbeee80284",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.demo-nacl",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "demo-nacl-rule-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "45.112.30.123/32",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-670264253",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-04651e2dbeee80284",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.demo-nacl",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626013543087:security-group/sg-09dfeff54822788f4",
            "description": "Allow below  traffic via Terraform",
            "egress": [],
            "id": "sg-09dfeff54822788f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "45.112.30.126/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec-grp",
            "name_prefix": "",
            "owner_id": "626013543087",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031c4bd532f144173"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626013543087:security-group/sg-08689a61971ea19bb",
            "description": "Allow below  traffic via Terraform",
            "egress": [],
            "id": "sg-08689a61971ea19bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "45.112.30.126/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec-grp",
            "name_prefix": "",
            "owner_id": "626013543087",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d456572cc7e44877"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626013543087:subnet/subnet-0dcee9e0d30ad913c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcee9e0d30ad913c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626013543087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet1"
            },
            "tags_all": {
              "Name": "private-subnet1"
            },
            "vpc_id": "vpc-0d456572cc7e44877"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626013543087:subnet/subnet-0235c1dc5e475ffb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0235c1dc5e475ffb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "626013543087",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet1"
            },
            "tags_all": {
              "Name": "pub-subnet1"
            },
            "vpc_id": "vpc-0d456572cc7e44877"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:626013543087:vpc/vpc-0d456572cc7e44877",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-03d92be574d695567",
            "default_route_table_id": "rtb-01baab21fb86e950c",
            "default_security_group_id": "sg-008cb35cdbcdc460d",
            "dhcp_options_id": "dopt-018123dc4532f8a0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d456572cc7e44877",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01baab21fb86e950c",
            "owner_id": "626013543087",
            "tags": {
              "name": "demo-vpc"
            },
            "tags_all": {
              "name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}